# CPsched

./: README.md
.github/workflows/: publish.yml
CPsched.App/: app.json  babel.config.js  expopushtoken.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json
CPsched.App/android/: settings.gradle
CPsched.App/android/app/: build.gradle
CPsched.App/android/app/src/main/: AndroidManifest.xml
CPsched.App/android/app/src/main/java/com/tanmayarya2018/CPsched/App/: MainActivity.kt  MainApplication.kt
CPsched.App/android/app/src/main/res/values/: strings.xml
CPsched.App/api/: contests.jsx
CPsched.App/app/: _layout.tsx  atoms.jsx
CPsched.App/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
CPsched.App/components/: AddToCalendar.jsx  ContestCard.jsx
CPsched.App/components/ui/: IconSymbol.tsx
CPsched.Backend/: .gitignore  Dockerfile  cache.py  ical_gen.py  main.py  pyproject.toml  requirements.txt
CPsched.Backend/.github/workflows/: publish.yml
CPsched.Backend/Services/: cf.py  codechef.py  lc.py  schema.py
CPsched.Backend/cal/: calendar.py  consts.py  utils.py
CPsched.Backend/ics/: .gitignore  index.html
