[project]
name = "cpsched-backend"
version = "0.1.0"
description = "CPsched Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attr==0.3.2",
    "beautifulsoup4==4.12.3",
    "chromedriver-autoinstaller==0.6.4",
    "colorama==0.4.6",
    "configparser==7.1.0",
    "cryptography==42.0.8",
    "cython>=3.2.4",
    "docutils==0.21.2",
    "fastapi[standard]>=0.115.6",
    "filelock==3.16.1",
    "htmlparser==0.0.2",
    "ipython==8.12.3",
    "ipywidgets==8.1.5",
    "keyring==25.6.0",
    "pillow==11.0.0",
    "protobuf==5.29.2",
    "pyopenssl==24.3.0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "redis==5.2.1",
    "selenium==4.27.1",
    "sphinx==8.1.3",
    "thread==2.0.5",
    "urllib3-secure-extra==0.1.0",
]
